# bolerodata

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  CLAUDE.md  README.md  environment.yml  hatch_build.py  huggingface_digest.md  index.html  mkdocs.yml  model_selection.tsv  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: build.yaml  claude.yml  docs.yaml  release.yaml  test.yaml
api/: index.html
data-setup/: index.html
docs/: api.md  data-setup.md  index.md  install.md  sharing.md
install/: index.html
scripts/: build_manifest.py  post_review_issues.py  reconcile_review.py  slim_array.sbatch  slim_checkpoint.py
search/: search_index.json
sharing/: index.html
src/bolerodata/: __init__.py  _sync.py  dataset.py  diff_analysis.py  model.py  model_mixin.py  qtl.py
src/bolerodata/data/: JASPAR_motif_cluster.tsv  JASPAR_motif_cluster_info.tsv  __init__.py  _path_patch.py  dataset_metadata.tsv  embedding_and_meta_cell.tsv  hf_manifest.json  model_zoo.tsv  qtl_collection.tsv
tests/: test_dataset.py
