[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
name = "bolerodata"
dynamic = ["version"]
description = "Dataset, model-zoo and metadata registry for the Bolero model"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Hanqing Liu" }]
maintainers = [
    { name = "Hanqing Liu", email = "hanqingliu@fas.harvard.edu" },
]
urls.Documentation = "https://liuhlab.github.io/bolerodata/"
urls.Source = "https://github.com/liuhlab/bolerodata"
urls.Home-page = "https://github.com/liuhlab/bolerodata"
# Kept deliberately minimal: bolerodata is a thin registry layer that is meant to
# run *inside* the `bolero` environment (it imports `bolero` lazily). It does not
# declare `bolero` (that would be circular) nor bolero's heavy GPU stack.
dependencies = [
    "anndata",
    "joblib",
    "pandas",
    "tqdm",
]

[project.optional-dependencies]
dev = ["pre-commit", "twine>=4.0.2"]
doc = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",       # API docs from numpy-style docstrings
    "mkdocs-jupyter",             # render notebooks
    "pymdown-extensions",
]
test = ["pytest", "coverage"]

[tool.coverage.run]
source = ["bolerodata"]
omit = ["**/test_*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
addopts = [
    "--import-mode=importlib", # allow using test files with same name
]

[tool.ruff]
src = ["src"]
line-length = 88
lint.select = [
    "F",      # Errors detected by Pyflakes
    "E",      # Error detected by Pycodestyle
    "W",      # Warning detected by Pycodestyle
    "I",      # isort
    "D",      # pydocstyle
    "B",      # flake8-bugbear
    "TID",    # flake8-tidy-imports
    "C4",     # flake8-comprehensions
    "BLE",    # flake8-blind-except
    "UP",     # pyupgrade
    "RUF100", # Report unused noqa directives
]
lint.ignore = [
    # line too long -> we accept long comment lines; formatter gets rid of long code lines
    "E501",
    # Do not assign a lambda expression, use a def -> lambda expression assignments are convenient
    "E731",
    # allow I, O, l as variable names -> I is the identity matrix
    "E741",
    # Missing docstring in public package
    "D104",
    # Missing docstring in public module
    "D100",
    # Missing docstring in __init__
    "D200",
    "D107",
    # Errors from function calls in argument defaults. These are fine when the result is immutable.
    "B008",
    "D101",
    # __magic__ methods are are often self-explanatory, allow missing docstrings
    "D105",
    # first line should end with a period [Bug: doesn't work with single-line docstrings]    "D400",
    # First line should be in imperative mood; try rephrasing
    "D400",
    "D401",
    "D404",
    ## Disable one in each pair of mutually incompatible rules
    # We don’t want a blank line before a class docstring
    "D203",
    "D205",
    # We want docstrings to start immediately after the opening triple quote
    "D213",
]
extend-include = ["*.ipynb"]
exclude = [
  "tests/"
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"docs/*" = ["I"]
"tests/*" = ["D"]
"*/__init__.py" = ["F401"]

[tool.hatch.version]
# This package uses Calendar Versioning (CalVer): tag releases as vYYYY.MM.DD
# (e.g. v2026.07.10), matching the `bolero` package it ships with. The version is
# derived from the latest git tag by hatch-vcs, so the scheme is set by how
# releases are tagged.
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/bolerodata"]

# ---------------------------------------------------------------------------
# pixi
# ---------------------------------------------------------------------------
# bolerodata mirrors bolero's pixi setup but stays lean: it carries NO GPU stack
# (no torch/CUDA/flash-attn/ray). It is normally consumed as a git dependency of
# `bolero` and runs inside bolero's environment; this pixi workspace exists mainly
# so the repo's own docs, lint and CI use the same tooling as bolero.
[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
bolerodata = { path = ".", editable = true }

[tool.pixi.dependencies]
python = "3.11.*"
pip = "*"
anndata = "*"
joblib = "*"
pandas = "*"
tqdm = "*"

# Standalone `docs` env (the doc feature is pypi-only), kept CUDA-free.
[tool.pixi.feature.doc.dependencies]
python = "3.11.*"

[tool.pixi.feature.doc.tasks]
docs-serve = "mkdocs serve"
docs-build = "mkdocs build --strict"
docs-deploy = "mkdocs gh-deploy --force" # build & push to the gh-pages branch

[tool.pixi.feature.dev.tasks]
lint = "pre-commit run --all-files"

[tool.pixi.feature.test.tasks]
test = "coverage run -m pytest -v --color=yes"

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev", "test"], solve-group = "default" }
docs = { features = ["doc"], no-default-feature = true } # lightweight: docs only
