[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
name = "bolerodata"
dynamic = ["version"]
description = "Dataset, model-zoo and metadata registry for the Bolero model"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Hanqing Liu" }]
maintainers = [
    { name = "Hanqing Liu", email = "hanqingliu@fas.harvard.edu" },
]
urls.Documentation = "https://liuhlab.github.io/bolerodata/"
urls.Source = "https://github.com/liuhlab/bolerodata"
urls.Home-page = "https://github.com/liuhlab/bolerodata"
# Kept deliberately lean: bolerodata is a thin registry layer. The core deps are
# enough to browse the registry and auto-download shared artifacts from HuggingFace.
# It does NOT declare `bolero` (circular) nor bolero's heavy GPU stack (`torch` is
# imported lazily, only when sizing batches / building a predictor). Heavy
# bioinformatics deps used only by `diff_analysis` live in the `diff` extra.
dependencies = [
    "anndata",
    "joblib",
    "numpy",             # used directly by diff_analysis; also a core scientific dep
    "pandas",
    "pyarrow",           # required by pandas.read_feather (the registry is feather-based)
    "huggingface_hub",   # auto-download of checkpoints / data from HuggingFace
    "platformdirs",      # resolve the per-user cache directory
]

[project.optional-dependencies]
# Differential-accessibility analysis (bolerodata.diff_analysis). Also needs the
# companion `bolero` package, which is not declared here (installed separately).
diff = ["pyBigWig", "pyranges", "pysam"]
full = ["bolerodata[diff]"]
dev = ["pre-commit", "twine>=4.0.2"]
doc = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",       # API docs from numpy-style docstrings
    "mkdocs-jupyter",             # render notebooks
    "pymdown-extensions",
]
test = ["pytest", "coverage"]

[tool.coverage.run]
source = ["bolerodata"]
omit = ["**/test_*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
addopts = [
    "--import-mode=importlib", # allow using test files with same name
]

[tool.ruff]
src = ["src"]
line-length = 88
lint.select = [
    "F",      # Errors detected by Pyflakes
    "E",      # Error detected by Pycodestyle
    "W",      # Warning detected by Pycodestyle
    "I",      # isort
    "D",      # pydocstyle
    "B",      # flake8-bugbear
    "TID",    # flake8-tidy-imports
    "C4",     # flake8-comprehensions
    "BLE",    # flake8-blind-except
    "UP",     # pyupgrade
    "RUF100", # Report unused noqa directives
]
lint.ignore = [
    # line too long -> we accept long comment lines; formatter gets rid of long code lines
    "E501",
    # Do not assign a lambda expression, use a def -> lambda expression assignments are convenient
    "E731",
    # allow I, O, l as variable names -> I is the identity matrix
    "E741",
    # Missing docstring in public package
    "D104",
    # Missing docstring in public module
    "D100",
    # Missing docstring in __init__
    "D200",
    "D107",
    # Errors from function calls in argument defaults. These are fine when the result is immutable.
    "B008",
    "D101",
    # __magic__ methods are are often self-explanatory, allow missing docstrings
    "D105",
    # first line should end with a period [Bug: doesn't work with single-line docstrings]    "D400",
    # First line should be in imperative mood; try rephrasing
    "D400",
    "D401",
    "D404",
    ## Disable one in each pair of mutually incompatible rules
    # We don’t want a blank line before a class docstring
    "D203",
    "D205",
    # We want docstrings to start immediately after the opening triple quote
    "D213",
]
extend-include = ["*.ipynb"]
exclude = [
  "tests/"
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"docs/*" = ["I"]
"tests/*" = ["D"]
"scripts/*" = ["D"]          # build/review tooling, not library API
"hatch_build.py" = ["D"]     # build hook
"*/__init__.py" = ["F401"]

[tool.hatch.version]
# This package uses Calendar Versioning (CalVer): tag releases as vYYYY.MM.DD
# (e.g. v2026.07.10), matching the `bolero` package it ships with. The version is
# derived from the latest git tag by hatch-vcs, so the scheme is set by how
# releases are tagged.
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/bolerodata"]

# Rewrite lab absolute paths in the shipped tables to portable logical paths, in
# the wheel only (git-committed tables keep absolute paths for the author fast path).
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

# Ship the build hook in the sdist so `sdist -> wheel` builds can run it too.
[tool.hatch.build.targets.sdist]
include = ["src", "hatch_build.py", "README.md", "LICENSE", "CHANGELOG.md", "huggingface_digest.md"]

# ---------------------------------------------------------------------------
# pixi
# ---------------------------------------------------------------------------
# bolerodata mirrors bolero's pixi setup but stays lean: it carries NO GPU stack
# (no torch/CUDA/flash-attn/ray). It is normally consumed as a git dependency of
# `bolero` and runs inside bolero's environment; this pixi workspace exists mainly
# so the repo's own docs, lint and CI use the same tooling as bolero.
[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
bolerodata = { path = ".", editable = true }

[tool.pixi.dependencies]
python = "3.11.*"
pip = "*"
anndata = "*"
joblib = "*"
numpy = "*"
pandas = "*"
pyarrow = "*"
huggingface_hub = "*"
platformdirs = "*"

# Optional differential-analysis stack (bioconda). Enable with `-e diff`.
[tool.pixi.feature.diff.dependencies]
pybigwig = "*"
pyranges = "*"
pysam = "*"

# Standalone `docs` env (the doc feature is pypi-only), kept CUDA-free.
[tool.pixi.feature.doc.dependencies]
python = "3.11.*"

[tool.pixi.feature.doc.tasks]
docs-serve = "mkdocs serve"
docs-build = "mkdocs build --strict"
docs-deploy = "mkdocs gh-deploy --force" # build & push to the gh-pages branch

[tool.pixi.feature.dev.tasks]
lint = "pre-commit run --all-files"

[tool.pixi.feature.test.tasks]
test = "coverage run -m pytest -v --color=yes"

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev", "test"], solve-group = "default" }
diff = { features = ["diff"], solve-group = "default" } # + differential-analysis deps
docs = { features = ["doc"], no-default-feature = true } # lightweight: docs only
